| Summary: | ASTERISK-27824: Fix issues exposed by GCC 8 | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2018-04-23 09:57:57 | Date Closed: | 2018-05-16 09:38:34 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Core/BuildSystem |
| Versions: | 13.20.0 GIT 15.3.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Fedora 28 x86_64 GCC 8 | Attachments: | |
| Description: | Fedora28 ships next week with GCC 8. We need to address the issues exposed by it.
| ||
| Comments: | By: Friendly Automation (friendly-automation) 2018-05-16 09:38:35.561-0500 Change 8936 merged by Jenkins2: Fix GCC 8 build issues. [https://gerrit.asterisk.org/8936|https://gerrit.asterisk.org/8936] By: Friendly Automation (friendly-automation) 2018-05-16 09:48:22.011-0500 Change 8935 merged by Jenkins2: Fix GCC 8 build issues. [https://gerrit.asterisk.org/8935|https://gerrit.asterisk.org/8935] By: Friendly Automation (friendly-automation) 2018-05-16 13:57:32.730-0500 Change 8934 merged by Joshua Colp: Fix GCC 8 build issues. [https://gerrit.asterisk.org/8934|https://gerrit.asterisk.org/8934] By: Friendly Automation (friendly-automation) 2018-07-17 03:43:55.455-0500 Change 9468 merged by George Joseph: Fix GCC 8 build issues. [https://gerrit.asterisk.org/9468|https://gerrit.asterisk.org/9468] | ||